# email

./: .env  Cargo.toml  Dockerfile  spec.yaml
configuration/: base.yaml  production.yaml
migrations/: 20240322182312_create_subscription_tokens_table.sql
scripts/: init_db.ps1
src/: configuration.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs
