[package]
name = "email"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4.5.1"
chrono = { version = "0.4.35", default-features = false, features = ["clock"] }
config = "0.14.0"
once_cell = "1.19.0"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde-aux = "4.5.0"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-actix-web = "0.7.10"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
uuid = { version = "1.7.0", features = ["v4"] }

[lib]
path = "src/lib.rs"
[[bin]]
path = "src/main.rs"
name = "email"
[dev-dependencies]
reqwest = "0.11.25"
